0028527: Visualization, AIS_InteractiveContext - custom selection presentation is never removed from View